fixed text overflow from why section by removing height in css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -219,7 +219,7 @@ fieldset[disabled] .btn-lg.active {
     
 }
 .whySection{
-    
+
 }
 .howSection{
     
@@ -317,7 +317,6 @@ fieldset[disabled] .btn-lg.active {
 .content-section-a {
     padding: 50px 0;
     background-color: white;
-    height: 500px;
 }
 
 .content-section-b {
